<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.ardnn.flix.moviedetail.MovieDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_background">

        <ImageView
            android:id="@+id/ivWallpaper"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@color/gray_primary"
            android:contentDescription="@string/iv_wallpaper_desc" />

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:elevation="3dp"
            android:background="@drawable/bg_circle_black"
            android:padding="8dp"
            android:src="@drawable/ic_arrow_back_yellow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/btn_back_desc" />

        <ImageView
            android:id="@+id/btnFavorite"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_circle_black"
            android:padding="8dp"
            android:src="@drawable/ic_favorite_border_yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/btn_favorite_desc" />

        <androidx.legacy.widget.Space
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toBottomOf="@+id/ivWallpaper"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/black_primary"
            android:paddingBottom="24dp"
            app:layout_constraintBottom_toBottomOf="@id/space2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivWallpaper" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvPoster"
            android:layout_width="120dp"
            android:layout_height="175dp"
            android:layout_marginStart="16dp"
            android:foreground="@drawable/bg_card_poster"
            app:cardCornerRadius="7dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/space">

            <ImageView
                android:id="@+id/ivPoster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/iv_poster_desc" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_medium"
            android:lineSpacingExtra="2dp"
            android:maxLines="3"
            android:textColor="@color/yellow_primary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cvPoster"
            app:layout_constraintTop_toBottomOf="@+id/ivWallpaper"
            tools:text="Title\nTitle" />

        <TextView
            android:id="@+id/tvReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            tools:text="1 January 2021" />

        <TextView
            android:id="@+id/bullet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/bullet"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvReleaseDate"
            app:layout_constraintStart_toEndOf="@+id/tvReleaseDate" />

        <TextView
            android:id="@+id/tvRuntime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/bullet"
            app:layout_constraintStart_toEndOf="@+id/bullet"
            tools:text="121 mins" />

        <ImageView
            android:id="@+id/ivStar"
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_star_yellow"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvReleaseDate"
            android:contentDescription="@string/iv_rating_desc" />

        <TextView
            android:id="@+id/tvRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ivStar"
            app:layout_constraintStart_toEndOf="@+id/ivStar"
            app:layout_constraintTop_toTopOf="@+id/ivStar"
            tools:text="8.2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/over_10"
            android:textColor="@color/gray_primary"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvRating"
            app:layout_constraintStart_toEndOf="@+id/tvRating" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvGenre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clipToPadding="false"
            android:paddingStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvPoster"
            tools:itemCount="1"
            tools:listitem="@layout/item_genre"
            tools:ignore="RtlSymmetry" />

        <androidx.legacy.widget.Space
            android:id="@+id/space2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvGenre" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clWrapperSynopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/black_primary"
            android:paddingHorizontal="16sp"
            android:paddingVertical="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/space2">

            <View
                android:id="@+id/view"
                android:layout_width="6dp"
                android:layout_height="0dp"
                android:background="@color/yellow_primary"
                app:layout_constraintBottom_toBottomOf="@+id/tvHeaderSynopsis"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvHeaderSynopsis" />

            <TextView
                android:id="@+id/tvHeaderSynopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/synopsis"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSynopsis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_regular"
                android:lineSpacingExtra="5dp"
                android:maxLines="2"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHeaderSynopsis"
                tools:text="haha wkwk lol\nini synopsis\nlorem lorem lorem" />

            <TextView
                android:id="@+id/tvMore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/more"
                android:textAlignment="textEnd"
                android:textColor="@color/gray_primary"
                android:textSize="14sp"
                android:fontFamily="@font/roboto_light"
                app:layout_constraintEnd_toEndOf="@+id/tvSynopsis"
                app:layout_constraintStart_toStartOf="@+id/tvSynopsis"
                app:layout_constraintTop_toBottomOf="@+id/tvSynopsis" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clAlert"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="2dp"
            android:background="@color/black_background">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTint="@color/yellow_primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvAlert"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:text="@string/unable_to_retrieve_data"
                android:textColor="@color/gray_primary"
                android:textSize="21sp"
                android:textAlignment="center"
                android:fontFamily="@font/roboto_regular"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>