...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cvPoster"
            app:layout_constraintTop_toBottomOf="@+id/ivWallpaper"
            tools:text="Title\nTitle" />

        <TextView
            android:id="@+id/tvReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/white"
            android:textSize="14sp"
...
